# yarad

./: Cargo.toml  Makefile.toml  README.md  config_example.yaml  install.sh
.github/workflows/: CI.yml
src/: cmd.yml  command.rs  config.rs  daemon.rs  error.rs  lib.rs  main.rs  protocol.rs  scan.rs  sock.rs
src/client/: args.rs  command.rs
src/daemon/: command.rs
