[package]
name = "yarad"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version="4.4.3", features=["derive"] }
daemonize = "0.5.0"
env_logger = "0.10.0"
libc = "0.2.147"
log = "0.4.20"
nix = "0.26.2"
parse_int = "0.6.0"
serde = { version="1.0.188", features=["derive"] }
serde_yaml = "0.9.25"
thiserror = "1.0.48"
tia = "1.0.3"
username = "0.2.0"
walkdir = "2.4.0"
yara = { version="0.21.0", features=["vendored"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync"] }

[target.'cfg(target_os = "linux")'.dependencies]
fanotify-rs = { git="https://github.com/n01e0/fanotify-rs" }
caps = "0.5.5"
