[package]
name = "yarad"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version="4.4.18", features=["derive"] }
daemonize = "0.5.0"
env_logger = "0.10.1"
libc = "0.2.151"
log = "0.4.20"
nix = { version="0.27.1", features=["user", "poll"] }
parse_int = "0.6.0"
serde = { version="1.0.193", features=["derive"] }
serde_yaml = "0.9.27"
thiserror = "1.0.50"
tia = "1.0.3"
username = "0.2.0"
walkdir = "2.4.0"
yara = { version="0.24.0", features=["vendored"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "fs"] }

[target.'cfg(target_os = "linux")'.dependencies]
fanotify-rs = { git="https://github.com/n01e0/fanotify-rs", branch="master" }
caps = "0.5.5"
